v1.0.0/modules/schema/pages/class/ExcST6B.adoc
= `ExcST6B`
:toclevels: 4


+++Modified IEEE ST6B static excitation system with PID controller and optional inner feedback loop.+++


[cols="h,3",width=65%]
|===
| Type
| Class

| URI
| `cim:ExcST6B`


| CIM standard (perspective)
| IEC61970 (Grid)



|===

== Class hierarchy
* xref::class/IdentifiedObject.adoc[`IdentifiedObject`]
** xref::class/DynamicsFunctionBlock.adoc[`DynamicsFunctionBlock`]
*** xref::class/ExcitationSystemDynamics.adoc[`ExcitationSystemDynamics`]
**** *`ExcST6B`*


== Slots



.Associated classes
[d2,svg,theme=4]
----
vars: {
  d2-config: {
    pad: 20
  }
}
ExcST6B {
  style {
    fill: "#eccfcb"
    shadow: true
  }
}









































SynchronousMachineDynamics {
  style {
    fill: "#eccfcb"
    shadow: true
  }
}



PowerSystemStabilizerDynamics {
  style {
    fill: "#eccfcb"
    shadow: true
  }
}



PFVArControllerType1Dynamics {
  style {
    fill: "#eccfcb"
    shadow: true
  }
}



OverexcitationLimiterDynamics {
  style {
    fill: "#eccfcb"
    shadow: true
  }
}



DiscontinuousExcitationControlDynamics {
  style {
    fill: "#eccfcb"
    shadow: true
  }
}



PFVArControllerType2Dynamics {
  style {
    fill: "#eccfcb"
    shadow: true
  }
}



UnderexcitationLimiterDynamics {
  style {
    fill: "#eccfcb"
    shadow: true
  }
}



VoltageCompensatorDynamics {
  style {
    fill: "#eccfcb"
    shadow: true
  }
}



DiagramObject {
  style {
    fill: "#eccfcb"
    shadow: true
  }
}



InstanceSet {
  style {
    fill: "#eccfcb"
    shadow: true
  }
}



Name {
  style {
    fill: "#eccfcb"
    shadow: true
  }
}



ChangeSetMember {
  style {
    fill: "#eccfcb"
    shadow: true
  }
}



ChangeSetMember {
  style {
    fill: "#eccfcb"
    shadow: true
  }
}























ExcST6B -> SynchronousMachineDynamics: SynchronousMachineDynamics


ExcST6B -> PowerSystemStabilizerDynamics: PowerSystemStabilizerDynamics


ExcST6B -> PFVArControllerType1Dynamics: PFVArControllerType1Dynamics


ExcST6B -> OverexcitationLimiterDynamics: OverexcitationLimiterDynamics


ExcST6B -> DiscontinuousExcitationControlDynamics: DiscontinuousExcitationControlDynamics


ExcST6B -> PFVArControllerType2Dynamics: PFVArControllerType2Dynamics


ExcST6B -> UnderexcitationLimiterDynamics: UnderexcitationLimiterDynamics


ExcST6B -> VoltageCompensatorDynamics: VoltageCompensatorDynamics


ExcST6B -> DiagramObject: DiagramObjects


ExcST6B -> InstanceSet: InstanceSet


ExcST6B -> Name: Names


ExcST6B -> ChangeSetMember: PropertiesCIMDataObject


ExcST6B -> ChangeSetMember: TargetingCIMDataObject


legend: "" {
  style: {
    fill: transparent
    stroke: transparent
  }
  grid-rows: 3
  grid-columns: 2
  grid-gap: 10
  near: bottom-right
  iec61968_color: "" {
    style: {
      fill: "#d1e7c2"
      stroke: black
      stroke-width: 1
    }
    width: 10
    height: 10
  }
  iec61968_text: "IEC61968 (Enterprise)" {
    shape: text
  }
  iec61970_color: "" {
    style: {
      fill: "#eccfcb"
      stroke: black
      stroke-width: 1
    }
    width: 10
    height: 10
  }
  iec61970_text: "IEC61970 (Grid)" {
    shape: text
  }
  iec62325_color: "" {
    style: {
      fill: "#fffbef"
      stroke: black
      stroke-width: 1
    }
    width: 10
    height: 10
  }
  iec62325_text: "IEC62325 (Market)" {
    shape: text
  }
}
----


[cols="3,1,3,6",width=100%]
|===
| Name | Cardinality | Type | Description

| <<InstanceSet,`InstanceSet`>>
| 1
| xref::class/InstanceSet.adoc[`InstanceSet`]
| +++Dataset containing the data objects.+++

| <<SynchronousMachineDynamics,`SynchronousMachineDynamics`>>
| 1
| xref::class/SynchronousMachineDynamics.adoc[`SynchronousMachineDynamics`]
| +++Synchronous machine model with which this excitation system model is associated.+++

| <<VoltageCompensatorDynamics,`VoltageCompensatorDynamics`>>
| 1
| xref::class/VoltageCompensatorDynamics.adoc[`VoltageCompensatorDynamics`]
| +++Voltage compensator model associated with this excitation system model.+++

| <<ilr,`ilr`>>
| 0..1
| xref::class/PU.adoc[`PU`]
| +++Exciter output current limit reference (<i>Ilr</i>) (&gt; 0).  Typical value = 4,164.+++

| <<k1,`k1`>>
| 0..1
| https://w3id.org/linkml/Boolean[`boolean`]
| +++Selector (<i>K1</i>).
true = feedback is from <i>Ifd</i>
false = feedback is not from <i>Ifd</i>.
Typical value = true.+++

| <<kcl,`kcl`>>
| 0..1
| xref::class/PU.adoc[`PU`]
| +++Exciter output current limit adjustment (<i>Kcl</i>) (&gt; 0).  Typical value = 1,0577.+++

| <<kff,`kff`>>
| 0..1
| xref::class/PU.adoc[`PU`]
| +++Pre-control gain constant of the inner loop field regulator (<i>Kff</i>).  Typical value = 1.+++

| <<kg,`kg`>>
| 0..1
| xref::class/PU.adoc[`PU`]
| +++Feedback gain constant of the inner loop field regulator (<i>Kg</i>) (&gt;= 0).  Typical value = 1.+++

| <<kia,`kia`>>
| 0..1
| xref::class/PU.adoc[`PU`]
| +++Voltage regulator integral gain (<i>Kia</i>) (&gt; 0).  Typical value = 45,094.+++

| <<klr,`klr`>>
| 0..1
| xref::class/PU.adoc[`PU`]
| +++Exciter output current limit adjustment (<i>Kcl</i>) (&gt; 0).  Typical value = 17,33.+++

| <<km,`km`>>
| 0..1
| xref::class/PU.adoc[`PU`]
| +++Forward gain constant of the inner loop field regulator (<i>Km</i>).  Typical value = 1.+++

| <<kpa,`kpa`>>
| 0..1
| xref::class/PU.adoc[`PU`]
| +++Voltage regulator proportional gain (<i>Kpa</i>) (&gt; 0).  Typical value = 18,038.+++

| <<kvd,`kvd`>>
| 0..1
| xref::class/PU.adoc[`PU`]
| +++Voltage regulator derivative gain (<i>Kvd</i>).  Typical value = 0.+++

| <<oelin,`oelin`>>
| 0..1
| xref::enumeration/ExcST6BOELselectorKind.adoc[`ExcST6BOELselectorKind`]
| +++OEL input selector (<i>OELin</i>).  Typical value = noOELinput (corresponds to <i>OELin</i> = 0 on diagram).+++

| <<tg,`tg`>>
| 0..1
| xref::class/Seconds.adoc[`Seconds`]
| +++Feedback time constant of inner loop field voltage regulator (<i>Tg</i>) (&gt;= 0).  Typical value = 0,02.+++

| <<ts,`ts`>>
| 0..1
| xref::class/Seconds.adoc[`Seconds`]
| +++Rectifier firing time constant (<i>Ts</i>) (&gt;= 0).  Typical value = 0.+++

| <<tvd,`tvd`>>
| 0..1
| xref::class/Seconds.adoc[`Seconds`]
| +++Voltage regulator derivative gain (<i>Tvd</i>) (&gt;= 0).  Typical value = 0.+++

| <<vamax,`vamax`>>
| 0..1
| xref::class/PU.adoc[`PU`]
| +++Maximum voltage regulator output (<i>Vamax</i>) (&gt; 0).  Typical value = 4,81.+++

| <<vamin,`vamin`>>
| 0..1
| xref::class/PU.adoc[`PU`]
| +++Minimum voltage regulator output (<i>Vamin</i>) (&lt; 0).  Typical value = -3,85.+++

| <<vilim,`vilim`>>
| 0..1
| https://w3id.org/linkml/Boolean[`boolean`]
| +++Selector (<i>Vilim</i>).
true = <i>Vimin</i>-<i>Vimax</i> limiter is active
false = <i>Vimin</i>-<i>Vimax</i> limiter is not active.
Typical value = true.+++

| <<vimax,`vimax`>>
| 0..1
| xref::class/PU.adoc[`PU`]
| +++Maximum voltage regulator input limit (<i>Vimax</i>) (&gt; ExcST6B.vimin).  Typical value = 10.+++

| <<vimin,`vimin`>>
| 0..1
| xref::class/PU.adoc[`PU`]
| +++Minimum voltage regulator input limit (<i>Vimin</i>) (&lt; ExcST6B.vimax).  Typical value = -10.+++

| <<vmult,`vmult`>>
| 0..1
| https://w3id.org/linkml/Boolean[`boolean`]
| +++Selector (<i>vmult</i>).
true = multiply regulator output by terminal voltage
false = do not multiply regulator output by terminal voltage. 
Typical value = true.+++

| <<vrmax,`vrmax`>>
| 0..1
| xref::class/PU.adoc[`PU`]
| +++Maximum voltage regulator output (<i>Vrmax</i>) (&gt; 0).  Typical value = 4,81.+++

| <<vrmin,`vrmin`>>
| 0..1
| xref::class/PU.adoc[`PU`]
| +++Minimum voltage regulator output (<i>Vrmin</i>) (&lt; 0).  Typical value = -3,85.+++

| <<xc,`xc`>>
| 0..1
| xref::class/PU.adoc[`PU`]
| +++Excitation source reactance (<i>Xc</i>).  Typical value = 0,05.+++

| <<DiscontinuousExcitationControlDynamics,`DiscontinuousExcitationControlDynamics`>>
| 0..1
| xref::class/DiscontinuousExcitationControlDynamics.adoc[`DiscontinuousExcitationControlDynamics`]
| +++Discontinuous excitation control model associated with this excitation system model.+++

| <<OverexcitationLimiterDynamics,`OverexcitationLimiterDynamics`>>
| 0..1
| xref::class/OverexcitationLimiterDynamics.adoc[`OverexcitationLimiterDynamics`]
| +++Overexcitation limiter model associated with this excitation system model.+++

| <<PFVArControllerType1Dynamics,`PFVArControllerType1Dynamics`>>
| 0..1
| xref::class/PFVArControllerType1Dynamics.adoc[`PFVArControllerType1Dynamics`]
| +++Power factor or VAr controller type 1 model associated with this excitation system model.+++

| <<PFVArControllerType2Dynamics,`PFVArControllerType2Dynamics`>>
| 0..1
| xref::class/PFVArControllerType2Dynamics.adoc[`PFVArControllerType2Dynamics`]
| +++Power factor or VAr controller type 2 model associated with this excitation system model.+++

| <<PowerSystemStabilizerDynamics,`PowerSystemStabilizerDynamics`>>
| 0..1
| xref::class/PowerSystemStabilizerDynamics.adoc[`PowerSystemStabilizerDynamics`]
| +++Power system stabilizer model associated with this excitation system model.+++

| <<PropertiesCIMDataObject,`PropertiesCIMDataObject`>>
| 0..1
| xref::class/ChangeSetMember.adoc[`ChangeSetMember`]
| +++The single CIM data object in the appropriate dataset context.+++

| <<UnderexcitationLimiterDynamics,`UnderexcitationLimiterDynamics`>>
| 0..1
| xref::class/UnderexcitationLimiterDynamics.adoc[`UnderexcitationLimiterDynamics`]
| +++Undrexcitation limiter model associated with this excitation system model.+++

| <<aliasName,`aliasName`>>
| 0..1
| https://w3id.org/linkml/String[`string`]
| +++The aliasName is free text human readable name of the object alternative to IdentifiedObject.name. It may be non unique and may not correlate to a naming hierarchy.
The attribute aliasName is retained because of backwards compatibility between CIM relases. It is however recommended to replace aliasName with the Name class as aliasName is planned for retirement at a future time.+++

| <<description,`description`>>
| 0..1
| https://w3id.org/linkml/String[`string`]
| +++The description is a free human readable text describing or naming the object. It may be non unique and may not correlate to a naming hierarchy.+++

| <<enabled,`enabled`>>
| 0..1
| https://w3id.org/linkml/Boolean[`boolean`]
| +++Function block used indicator.
true = use of function block is enabled
false = use of function block is disabled.+++

| <<mRID,`mRID`>>
| 0..1
| https://w3id.org/linkml/String[`string`]
| +++Master resource identifier issued by a model authority. The mRID is unique within an exchange context. Global uniqueness is easily achieved by using a UUID, as specified in RFC 4122, for the mRID. The use of UUID is strongly recommended.
For CIMXML data files in RDF syntax conforming to IEC 61970-552, the mRID is mapped to rdf:ID or rdf:about attributes that identify CIM object elements.+++

| <<name,`name`>>
| 0..1
| https://w3id.org/linkml/String[`string`]
| +++The name is any free human readable and possibly non unique text naming the object.+++

| <<DiagramObjects,`DiagramObjects`>>
| 0..*
| xref::class/DiagramObject.adoc[`DiagramObject`]
| +++The diagram objects that are associated with the domain object.+++

| <<Names,`Names`>>
| 0..*
| xref::class/Name.adoc[`Name`]
| +++All names of this identified object.+++

| <<TargetingCIMDataObject,`TargetingCIMDataObject`>>
| 0..*
| xref::class/ChangeSetMember.adoc[`ChangeSetMember`]
| +++Data objects registered.+++
|===

'''


//[discrete]
[#aliasName]
=== `aliasName`
+++The aliasName is free text human readable name of the object alternative to IdentifiedObject.name. It may be non unique and may not correlate to a naming hierarchy.
The attribute aliasName is retained because of backwards compatibility between CIM relases. It is however recommended to replace aliasName with the Name class as aliasName is planned for retirement at a future time.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.aliasName`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#description]
=== `description`
+++The description is a free human readable text describing or naming the object. It may be non unique and may not correlate to a naming hierarchy.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.description`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#DiagramObjects]
=== `DiagramObjects`
+++The diagram objects that are associated with the domain object.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.DiagramObjects`
| Cardinality
| 0..*
| Type
| xref::class/DiagramObject.adoc[`DiagramObject`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#DiscontinuousExcitationControlDynamics]
=== `DiscontinuousExcitationControlDynamics`
+++Discontinuous excitation control model associated with this excitation system model.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:ExcitationSystemDynamics.DiscontinuousExcitationControlDynamics`
| Cardinality
| 0..1
| Type
| xref::class/DiscontinuousExcitationControlDynamics.adoc[`DiscontinuousExcitationControlDynamics`]

| Inherited from
| xref::class/ExcitationSystemDynamics.adoc[`ExcitationSystemDynamics`]


|===

//[discrete]
[#enabled]
=== `enabled`
+++Function block used indicator.
true = use of function block is enabled
false = use of function block is disabled.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:DynamicsFunctionBlock.enabled`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/Boolean[`boolean`]

| Inherited from
| xref::class/DynamicsFunctionBlock.adoc[`DynamicsFunctionBlock`]


|===

//[discrete]
[#ilr]
=== `ilr`
+++Exciter output current limit reference (<i>Ilr</i>) (&gt; 0).  Typical value = 4,164.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:ExcST6B.ilr`
| Cardinality
| 0..1
| Type
| xref::class/PU.adoc[`PU`]


|===

//[discrete]
[#InstanceSet]
=== `InstanceSet`
+++Dataset containing the data objects.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.InstanceSet`
| Cardinality
| 1
| Type
| xref::class/InstanceSet.adoc[`InstanceSet`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#k1]
=== `k1`
+++Selector (<i>K1</i>).
true = feedback is from <i>Ifd</i>
false = feedback is not from <i>Ifd</i>.
Typical value = true.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:ExcST6B.k1`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/Boolean[`boolean`]


|===

//[discrete]
[#kcl]
=== `kcl`
+++Exciter output current limit adjustment (<i>Kcl</i>) (&gt; 0).  Typical value = 1,0577.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:ExcST6B.kcl`
| Cardinality
| 0..1
| Type
| xref::class/PU.adoc[`PU`]


|===

//[discrete]
[#kff]
=== `kff`
+++Pre-control gain constant of the inner loop field regulator (<i>Kff</i>).  Typical value = 1.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:ExcST6B.kff`
| Cardinality
| 0..1
| Type
| xref::class/PU.adoc[`PU`]


|===

//[discrete]
[#kg]
=== `kg`
+++Feedback gain constant of the inner loop field regulator (<i>Kg</i>) (&gt;= 0).  Typical value = 1.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:ExcST6B.kg`
| Cardinality
| 0..1
| Type
| xref::class/PU.adoc[`PU`]


|===

//[discrete]
[#kia]
=== `kia`
+++Voltage regulator integral gain (<i>Kia</i>) (&gt; 0).  Typical value = 45,094.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:ExcST6B.kia`
| Cardinality
| 0..1
| Type
| xref::class/PU.adoc[`PU`]


|===

//[discrete]
[#klr]
=== `klr`
+++Exciter output current limit adjustment (<i>Kcl</i>) (&gt; 0).  Typical value = 17,33.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:ExcST6B.klr`
| Cardinality
| 0..1
| Type
| xref::class/PU.adoc[`PU`]


|===

//[discrete]
[#km]
=== `km`
+++Forward gain constant of the inner loop field regulator (<i>Km</i>).  Typical value = 1.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:ExcST6B.km`
| Cardinality
| 0..1
| Type
| xref::class/PU.adoc[`PU`]


|===

//[discrete]
[#kpa]
=== `kpa`
+++Voltage regulator proportional gain (<i>Kpa</i>) (&gt; 0).  Typical value = 18,038.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:ExcST6B.kpa`
| Cardinality
| 0..1
| Type
| xref::class/PU.adoc[`PU`]


|===

//[discrete]
[#kvd]
=== `kvd`
+++Voltage regulator derivative gain (<i>Kvd</i>).  Typical value = 0.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:ExcST6B.kvd`
| Cardinality
| 0..1
| Type
| xref::class/PU.adoc[`PU`]


|===

//[discrete]
[#mRID]
=== `mRID`
+++Master resource identifier issued by a model authority. The mRID is unique within an exchange context. Global uniqueness is easily achieved by using a UUID, as specified in RFC 4122, for the mRID. The use of UUID is strongly recommended.
For CIMXML data files in RDF syntax conforming to IEC 61970-552, the mRID is mapped to rdf:ID or rdf:about attributes that identify CIM object elements.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.mRID`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#name]
=== `name`
+++The name is any free human readable and possibly non unique text naming the object.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.name`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#Names]
=== `Names`
+++All names of this identified object.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.Names`
| Cardinality
| 0..*
| Type
| xref::class/Name.adoc[`Name`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#oelin]
=== `oelin`
+++OEL input selector (<i>OELin</i>).  Typical value = noOELinput (corresponds to <i>OELin</i> = 0 on diagram).+++

[cols="h,4",width=65%]
|===
| URI
| `cim:ExcST6B.oelin`
| Cardinality
| 0..1
| Type
| xref::enumeration/ExcST6BOELselectorKind.adoc[`ExcST6BOELselectorKind`]


|===

//[discrete]
[#OverexcitationLimiterDynamics]
=== `OverexcitationLimiterDynamics`
+++Overexcitation limiter model associated with this excitation system model.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:ExcitationSystemDynamics.OverexcitationLimiterDynamics`
| Cardinality
| 0..1
| Type
| xref::class/OverexcitationLimiterDynamics.adoc[`OverexcitationLimiterDynamics`]

| Inherited from
| xref::class/ExcitationSystemDynamics.adoc[`ExcitationSystemDynamics`]


|===

//[discrete]
[#PFVArControllerType1Dynamics]
=== `PFVArControllerType1Dynamics`
+++Power factor or VAr controller type 1 model associated with this excitation system model.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:ExcitationSystemDynamics.PFVArControllerType1Dynamics`
| Cardinality
| 0..1
| Type
| xref::class/PFVArControllerType1Dynamics.adoc[`PFVArControllerType1Dynamics`]

| Inherited from
| xref::class/ExcitationSystemDynamics.adoc[`ExcitationSystemDynamics`]


|===

//[discrete]
[#PFVArControllerType2Dynamics]
=== `PFVArControllerType2Dynamics`
+++Power factor or VAr controller type 2 model associated with this excitation system model.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:ExcitationSystemDynamics.PFVArControllerType2Dynamics`
| Cardinality
| 0..1
| Type
| xref::class/PFVArControllerType2Dynamics.adoc[`PFVArControllerType2Dynamics`]

| Inherited from
| xref::class/ExcitationSystemDynamics.adoc[`ExcitationSystemDynamics`]


|===

//[discrete]
[#PowerSystemStabilizerDynamics]
=== `PowerSystemStabilizerDynamics`
+++Power system stabilizer model associated with this excitation system model.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:ExcitationSystemDynamics.PowerSystemStabilizerDynamics`
| Cardinality
| 0..1
| Type
| xref::class/PowerSystemStabilizerDynamics.adoc[`PowerSystemStabilizerDynamics`]

| Inherited from
| xref::class/ExcitationSystemDynamics.adoc[`ExcitationSystemDynamics`]


|===

//[discrete]
[#PropertiesCIMDataObject]
=== `PropertiesCIMDataObject`
+++The single CIM data object in the appropriate dataset context.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.PropertiesCIMDataObject`
| Cardinality
| 0..1
| Type
| xref::class/ChangeSetMember.adoc[`ChangeSetMember`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#SynchronousMachineDynamics]
=== `SynchronousMachineDynamics`
+++Synchronous machine model with which this excitation system model is associated.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:ExcitationSystemDynamics.SynchronousMachineDynamics`
| Cardinality
| 1
| Type
| xref::class/SynchronousMachineDynamics.adoc[`SynchronousMachineDynamics`]

| Inherited from
| xref::class/ExcitationSystemDynamics.adoc[`ExcitationSystemDynamics`]


|===

//[discrete]
[#TargetingCIMDataObject]
=== `TargetingCIMDataObject`
+++Data objects registered.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.TargetingCIMDataObject`
| Cardinality
| 0..*
| Type
| xref::class/ChangeSetMember.adoc[`ChangeSetMember`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#tg]
=== `tg`
+++Feedback time constant of inner loop field voltage regulator (<i>Tg</i>) (&gt;= 0).  Typical value = 0,02.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:ExcST6B.tg`
| Cardinality
| 0..1
| Type
| xref::class/Seconds.adoc[`Seconds`]


|===

//[discrete]
[#ts]
=== `ts`
+++Rectifier firing time constant (<i>Ts</i>) (&gt;= 0).  Typical value = 0.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:ExcST6B.ts`
| Cardinality
| 0..1
| Type
| xref::class/Seconds.adoc[`Seconds`]


|===

//[discrete]
[#tvd]
=== `tvd`
+++Voltage regulator derivative gain (<i>Tvd</i>) (&gt;= 0).  Typical value = 0.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:ExcST6B.tvd`
| Cardinality
| 0..1
| Type
| xref::class/Seconds.adoc[`Seconds`]


|===

//[discrete]
[#UnderexcitationLimiterDynamics]
=== `UnderexcitationLimiterDynamics`
+++Undrexcitation limiter model associated with this excitation system model.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:ExcitationSystemDynamics.UnderexcitationLimiterDynamics`
| Cardinality
| 0..1
| Type
| xref::class/UnderexcitationLimiterDynamics.adoc[`UnderexcitationLimiterDynamics`]

| Inherited from
| xref::class/ExcitationSystemDynamics.adoc[`ExcitationSystemDynamics`]


|===

//[discrete]
[#vamax]
=== `vamax`
+++Maximum voltage regulator output (<i>Vamax</i>) (&gt; 0).  Typical value = 4,81.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:ExcST6B.vamax`
| Cardinality
| 0..1
| Type
| xref::class/PU.adoc[`PU`]


|===

//[discrete]
[#vamin]
=== `vamin`
+++Minimum voltage regulator output (<i>Vamin</i>) (&lt; 0).  Typical value = -3,85.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:ExcST6B.vamin`
| Cardinality
| 0..1
| Type
| xref::class/PU.adoc[`PU`]


|===

//[discrete]
[#vilim]
=== `vilim`
+++Selector (<i>Vilim</i>).
true = <i>Vimin</i>-<i>Vimax</i> limiter is active
false = <i>Vimin</i>-<i>Vimax</i> limiter is not active.
Typical value = true.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:ExcST6B.vilim`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/Boolean[`boolean`]


|===

//[discrete]
[#vimax]
=== `vimax`
+++Maximum voltage regulator input limit (<i>Vimax</i>) (&gt; ExcST6B.vimin).  Typical value = 10.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:ExcST6B.vimax`
| Cardinality
| 0..1
| Type
| xref::class/PU.adoc[`PU`]


|===

//[discrete]
[#vimin]
=== `vimin`
+++Minimum voltage regulator input limit (<i>Vimin</i>) (&lt; ExcST6B.vimax).  Typical value = -10.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:ExcST6B.vimin`
| Cardinality
| 0..1
| Type
| xref::class/PU.adoc[`PU`]


|===

//[discrete]
[#vmult]
=== `vmult`
+++Selector (<i>vmult</i>).
true = multiply regulator output by terminal voltage
false = do not multiply regulator output by terminal voltage. 
Typical value = true.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:ExcST6B.vmult`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/Boolean[`boolean`]


|===

//[discrete]
[#VoltageCompensatorDynamics]
=== `VoltageCompensatorDynamics`
+++Voltage compensator model associated with this excitation system model.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:ExcitationSystemDynamics.VoltageCompensatorDynamics`
| Cardinality
| 1
| Type
| xref::class/VoltageCompensatorDynamics.adoc[`VoltageCompensatorDynamics`]

| Inherited from
| xref::class/ExcitationSystemDynamics.adoc[`ExcitationSystemDynamics`]


|===

//[discrete]
[#vrmax]
=== `vrmax`
+++Maximum voltage regulator output (<i>Vrmax</i>) (&gt; 0).  Typical value = 4,81.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:ExcST6B.vrmax`
| Cardinality
| 0..1
| Type
| xref::class/PU.adoc[`PU`]


|===

//[discrete]
[#vrmin]
=== `vrmin`
+++Minimum voltage regulator output (<i>Vrmin</i>) (&lt; 0).  Typical value = -3,85.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:ExcST6B.vrmin`
| Cardinality
| 0..1
| Type
| xref::class/PU.adoc[`PU`]


|===

//[discrete]
[#xc]
=== `xc`
+++Excitation source reactance (<i>Xc</i>).  Typical value = 0,05.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:ExcST6B.xc`
| Cardinality
| 0..1
| Type
| xref::class/PU.adoc[`PU`]


|===


