v1.1.0/modules/schema/pages/class/ExcST6B.adoc
= `ExcST6B`
:toclevels: 4


+++Modified IEEE ST6B static excitation system with PID controller and optional inner feedback loop.+++


[cols="h,3",width=65%]
|===
| Type
| Class

| URI
| `cim:ExcST6B`


| CIM standard (perspective)
| IEC61970 (Grid)



|===

== Class hierarchy
* xref::class/IdentifiedObject.adoc[`IdentifiedObject`]
** xref::class/DynamicsFunctionBlock.adoc[`DynamicsFunctionBlock`]
*** xref::class/ExcitationSystemDynamics.adoc[`ExcitationSystemDynamics`]
**** *`ExcST6B`*


== Slots




[cols="1,1,2,1",width=100%]
|===
| Name | Type | Description | Inherited from

| <<ilr,`ilr`>>
//| [[slots_table.ilr]]<<ilr,`ilr`>>
| 0..1 +
xref::class/PU.adoc[`PU`]
| +++Exciter output current limit reference (<i>Ilr</i>) (&gt; 0).  Typical value = 4,164.+++
| _n/a_

| <<k1,`k1`>>
//| [[slots_table.k1]]<<k1,`k1`>>
| 0..1 +
https://w3id.org/linkml/Boolean[`boolean`]
| +++Selector (<i>K1</i>).
true = feedback is from <i>Ifd</i>
false = feedback is not from <i>Ifd</i>.
Typical value = true.+++
| _n/a_

| <<kcl,`kcl`>>
//| [[slots_table.kcl]]<<kcl,`kcl`>>
| 0..1 +
xref::class/PU.adoc[`PU`]
| +++Exciter output current limit adjustment (<i>Kcl</i>) (&gt; 0).  Typical value = 1,0577.+++
| _n/a_

| <<kff,`kff`>>
//| [[slots_table.kff]]<<kff,`kff`>>
| 0..1 +
xref::class/PU.adoc[`PU`]
| +++Pre-control gain constant of the inner loop field regulator (<i>Kff</i>).  Typical value = 1.+++
| _n/a_

| <<kg,`kg`>>
//| [[slots_table.kg]]<<kg,`kg`>>
| 0..1 +
xref::class/PU.adoc[`PU`]
| +++Feedback gain constant of the inner loop field regulator (<i>Kg</i>) (&gt;= 0).  Typical value = 1.+++
| _n/a_

| <<kia,`kia`>>
//| [[slots_table.kia]]<<kia,`kia`>>
| 0..1 +
xref::class/PU.adoc[`PU`]
| +++Voltage regulator integral gain (<i>Kia</i>) (&gt; 0).  Typical value = 45,094.+++
| _n/a_

| <<klr,`klr`>>
//| [[slots_table.klr]]<<klr,`klr`>>
| 0..1 +
xref::class/PU.adoc[`PU`]
| +++Exciter output current limit adjustment (<i>Kcl</i>) (&gt; 0).  Typical value = 17,33.+++
| _n/a_

| <<km,`km`>>
//| [[slots_table.km]]<<km,`km`>>
| 0..1 +
xref::class/PU.adoc[`PU`]
| +++Forward gain constant of the inner loop field regulator (<i>Km</i>).  Typical value = 1.+++
| _n/a_

| <<kpa,`kpa`>>
//| [[slots_table.kpa]]<<kpa,`kpa`>>
| 0..1 +
xref::class/PU.adoc[`PU`]
| +++Voltage regulator proportional gain (<i>Kpa</i>) (&gt; 0).  Typical value = 18,038.+++
| _n/a_

| <<kvd,`kvd`>>
//| [[slots_table.kvd]]<<kvd,`kvd`>>
| 0..1 +
xref::class/PU.adoc[`PU`]
| +++Voltage regulator derivative gain (<i>Kvd</i>).  Typical value = 0.+++
| _n/a_

| <<oelin,`oelin`>>
//| [[slots_table.oelin]]<<oelin,`oelin`>>
| 0..1 +
xref::enumeration/ExcST6BOELselectorKind.adoc[`ExcST6BOELselectorKind`]
| +++OEL input selector (<i>OELin</i>).  Typical value = noOELinput (corresponds to <i>OELin</i> = 0 on diagram).+++
| _n/a_

| <<tg,`tg`>>
//| [[slots_table.tg]]<<tg,`tg`>>
| 0..1 +
xref::class/Seconds.adoc[`Seconds`]
| +++Feedback time constant of inner loop field voltage regulator (<i>Tg</i>) (&gt;= 0).  Typical value = 0,02.+++
| _n/a_

| <<ts,`ts`>>
//| [[slots_table.ts]]<<ts,`ts`>>
| 0..1 +
xref::class/Seconds.adoc[`Seconds`]
| +++Rectifier firing time constant (<i>Ts</i>) (&gt;= 0).  Typical value = 0.+++
| _n/a_

| <<tvd,`tvd`>>
//| [[slots_table.tvd]]<<tvd,`tvd`>>
| 0..1 +
xref::class/Seconds.adoc[`Seconds`]
| +++Voltage regulator derivative gain (<i>Tvd</i>) (&gt;= 0).  Typical value = 0.+++
| _n/a_

| <<vamax,`vamax`>>
//| [[slots_table.vamax]]<<vamax,`vamax`>>
| 0..1 +
xref::class/PU.adoc[`PU`]
| +++Maximum voltage regulator output (<i>Vamax</i>) (&gt; 0).  Typical value = 4,81.+++
| _n/a_

| <<vamin,`vamin`>>
//| [[slots_table.vamin]]<<vamin,`vamin`>>
| 0..1 +
xref::class/PU.adoc[`PU`]
| +++Minimum voltage regulator output (<i>Vamin</i>) (&lt; 0).  Typical value = -3,85.+++
| _n/a_

| <<vilim,`vilim`>>
//| [[slots_table.vilim]]<<vilim,`vilim`>>
| 0..1 +
https://w3id.org/linkml/Boolean[`boolean`]
| +++Selector (<i>Vilim</i>).
true = <i>Vimin</i>-<i>Vimax</i> limiter is active
false = <i>Vimin</i>-<i>Vimax</i> limiter is...+++
| _n/a_

| <<vimax,`vimax`>>
//| [[slots_table.vimax]]<<vimax,`vimax`>>
| 0..1 +
xref::class/PU.adoc[`PU`]
| +++Maximum voltage regulator input limit (<i>Vimax</i>) (&gt; ExcST6B.vimin).  Typical value = 10.+++
| _n/a_

| <<vimin,`vimin`>>
//| [[slots_table.vimin]]<<vimin,`vimin`>>
| 0..1 +
xref::class/PU.adoc[`PU`]
| +++Minimum voltage regulator input limit (<i>Vimin</i>) (&lt; ExcST6B.vimax).  Typical value = -10.+++
| _n/a_

| <<vmult,`vmult`>>
//| [[slots_table.vmult]]<<vmult,`vmult`>>
| 0..1 +
https://w3id.org/linkml/Boolean[`boolean`]
| +++Selector (<i>vmult</i>).
true = multiply regulator output by terminal voltage
false = do not multiply regulator output by...+++
| _n/a_

| <<vrmax,`vrmax`>>
//| [[slots_table.vrmax]]<<vrmax,`vrmax`>>
| 0..1 +
xref::class/PU.adoc[`PU`]
| +++Maximum voltage regulator output (<i>Vrmax</i>) (&gt; 0).  Typical value = 4,81.+++
| _n/a_

| <<vrmin,`vrmin`>>
//| [[slots_table.vrmin]]<<vrmin,`vrmin`>>
| 0..1 +
xref::class/PU.adoc[`PU`]
| +++Minimum voltage regulator output (<i>Vrmin</i>) (&lt; 0).  Typical value = -3,85.+++
| _n/a_

| <<xc,`xc`>>
//| [[slots_table.xc]]<<xc,`xc`>>
| 0..1 +
xref::class/PU.adoc[`PU`]
| +++Excitation source reactance (<i>Xc</i>).  Typical value = 0,05.+++
| _n/a_

| <<DiscontinuousExcitationControlDynamics,`DiscontinuousExcitationControlDynamics`>>
//| [[slots_table.DiscontinuousExcitationControlDynamics]]<<DiscontinuousExcitationControlDynamics,`DiscontinuousExcitationControlDynamics`>>
| 0..1 +
xref::class/DiscontinuousExcitationControlDynamics.adoc[`DiscontinuousExcitationControlDynamics`]
| +++Discontinuous excitation control model associated with this excitation system model.+++
| xref::class/ExcitationSystemDynamics.adoc[`ExcitationSystemDynamics`]

| <<OverexcitationLimiterDynamics,`OverexcitationLimiterDynamics`>>
//| [[slots_table.OverexcitationLimiterDynamics]]<<OverexcitationLimiterDynamics,`OverexcitationLimiterDynamics`>>
| 0..1 +
xref::class/OverexcitationLimiterDynamics.adoc[`OverexcitationLimiterDynamics`]
| +++Overexcitation limiter model associated with this excitation system model.+++
| xref::class/ExcitationSystemDynamics.adoc[`ExcitationSystemDynamics`]

| <<PFVArControllerType1Dynamics,`PFVArControllerType1Dynamics`>>
//| [[slots_table.PFVArControllerType1Dynamics]]<<PFVArControllerType1Dynamics,`PFVArControllerType1Dynamics`>>
| 0..1 +
xref::class/PFVArControllerType1Dynamics.adoc[`PFVArControllerType1Dynamics`]
| +++Power factor or VAr controller type 1 model associated with this excitation system model.+++
| xref::class/ExcitationSystemDynamics.adoc[`ExcitationSystemDynamics`]

| <<PFVArControllerType2Dynamics,`PFVArControllerType2Dynamics`>>
//| [[slots_table.PFVArControllerType2Dynamics]]<<PFVArControllerType2Dynamics,`PFVArControllerType2Dynamics`>>
| 0..1 +
xref::class/PFVArControllerType2Dynamics.adoc[`PFVArControllerType2Dynamics`]
| +++Power factor or VAr controller type 2 model associated with this excitation system model.+++
| xref::class/ExcitationSystemDynamics.adoc[`ExcitationSystemDynamics`]

| <<PowerSystemStabilizerDynamics,`PowerSystemStabilizerDynamics`>>
//| [[slots_table.PowerSystemStabilizerDynamics]]<<PowerSystemStabilizerDynamics,`PowerSystemStabilizerDynamics`>>
| 0..1 +
xref::class/PowerSystemStabilizerDynamics.adoc[`PowerSystemStabilizerDynamics`]
| +++Power system stabilizer model associated with this excitation system model.+++
| xref::class/ExcitationSystemDynamics.adoc[`ExcitationSystemDynamics`]

| <<SynchronousMachineDynamics,`SynchronousMachineDynamics`>>
//| [[slots_table.SynchronousMachineDynamics]]<<SynchronousMachineDynamics,`SynchronousMachineDynamics`>>
| 1 +
xref::class/SynchronousMachineDynamics.adoc[`SynchronousMachineDynamics`]
| +++Synchronous machine model with which this excitation system model is associated.+++
| xref::class/ExcitationSystemDynamics.adoc[`ExcitationSystemDynamics`]

| <<UnderexcitationLimiterDynamics,`UnderexcitationLimiterDynamics`>>
//| [[slots_table.UnderexcitationLimiterDynamics]]<<UnderexcitationLimiterDynamics,`UnderexcitationLimiterDynamics`>>
| 0..1 +
xref::class/UnderexcitationLimiterDynamics.adoc[`UnderexcitationLimiterDynamics`]
| +++Undrexcitation limiter model associated with this excitation system model.+++
| xref::class/ExcitationSystemDynamics.adoc[`ExcitationSystemDynamics`]

| <<VoltageCompensatorDynamics,`VoltageCompensatorDynamics`>>
//| [[slots_table.VoltageCompensatorDynamics]]<<VoltageCompensatorDynamics,`VoltageCompensatorDynamics`>>
| 1 +
xref::class/VoltageCompensatorDynamics.adoc[`VoltageCompensatorDynamics`]
| +++Voltage compensator model associated with this excitation system model.+++
| xref::class/ExcitationSystemDynamics.adoc[`ExcitationSystemDynamics`]

| <<enabled,`enabled`>>
//| [[slots_table.enabled]]<<enabled,`enabled`>>
| 0..1 +
https://w3id.org/linkml/Boolean[`boolean`]
| +++Function block used indicator.
true = use of function block is enabled
false = use of function block is disabled.+++
| xref::class/DynamicsFunctionBlock.adoc[`DynamicsFunctionBlock`]

| <<DiagramObjects,`DiagramObjects`>>
//| [[slots_table.DiagramObjects]]<<DiagramObjects,`DiagramObjects`>>
| 0..* +
xref::class/DiagramObject.adoc[`DiagramObject`]
| +++The diagram objects that are associated with the domain object.+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]

| <<InstanceSet,`InstanceSet`>>
//| [[slots_table.InstanceSet]]<<InstanceSet,`InstanceSet`>>
| 1 +
xref::class/InstanceSet.adoc[`InstanceSet`]
| +++Dataset containing the data objects.+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]

| <<Names,`Names`>>
//| [[slots_table.Names]]<<Names,`Names`>>
| 0..* +
xref::class/Name.adoc[`Name`]
| +++All names of this identified object.+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]

| <<PropertiesCIMDataObject,`PropertiesCIMDataObject`>>
//| [[slots_table.PropertiesCIMDataObject]]<<PropertiesCIMDataObject,`PropertiesCIMDataObject`>>
| 0..1 +
xref::class/ChangeSetMember.adoc[`ChangeSetMember`]
| +++The single CIM data object in the appropriate dataset context.+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]

| <<TargetingCIMDataObject,`TargetingCIMDataObject`>>
//| [[slots_table.TargetingCIMDataObject]]<<TargetingCIMDataObject,`TargetingCIMDataObject`>>
| 0..* +
xref::class/ChangeSetMember.adoc[`ChangeSetMember`]
| +++Data objects registered.+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]

| <<aliasName,`aliasName`>>
//| [[slots_table.aliasName]]<<aliasName,`aliasName`>>
| 0..1 +
https://w3id.org/linkml/String[`string`]
| +++The aliasName is free text human readable name of the object alternative to IdentifiedObject.name. It may be non unique and...+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]

| <<description,`description`>>
//| [[slots_table.description]]<<description,`description`>>
| 0..1 +
https://w3id.org/linkml/String[`string`]
| +++The description is a free human readable text describing or naming the object. It may be non unique and may not correlate to...+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]

| <<mRID,`mRID`>>
//| [[slots_table.mRID]]<<mRID,`mRID`>>
| 0..1 +
https://w3id.org/linkml/String[`string`]
| +++Master resource identifier issued by a model authority. The mRID is unique within an exchange context. Global uniqueness is...+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]

| <<name,`name`>>
//| [[slots_table.name]]<<name,`name`>>
| 0..1 +
https://w3id.org/linkml/String[`string`]
| +++The name is any free human readable and possibly non unique text naming the object.+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]
|===

'''


//[discrete]
[#aliasName]
=== `aliasName`
+++The aliasName is free text human readable name of the object alternative to IdentifiedObject.name. It may be non unique and may not correlate to a naming hierarchy.
The attribute aliasName is retained because of backwards compatibility between CIM relases. It is however recommended to replace aliasName with the Name class as aliasName is planned for retirement at a future time.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.aliasName`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.aliasName,&#10548;>>
--
////


//[discrete]
[#description]
=== `description`
+++The description is a free human readable text describing or naming the object. It may be non unique and may not correlate to a naming hierarchy.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.description`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.description,&#10548;>>
--
////


//[discrete]
[#DiagramObjects]
=== `DiagramObjects`
+++The diagram objects that are associated with the domain object.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.DiagramObjects`
| Cardinality
| 0..*
| Type
| xref::class/DiagramObject.adoc[`DiagramObject`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.DiagramObjects,&#10548;>>
--
////


//[discrete]
[#DiscontinuousExcitationControlDynamics]
=== `DiscontinuousExcitationControlDynamics`
+++Discontinuous excitation control model associated with this excitation system model.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:ExcitationSystemDynamics.DiscontinuousExcitationControlDynamics`
| Cardinality
| 0..1
| Type
| xref::class/DiscontinuousExcitationControlDynamics.adoc[`DiscontinuousExcitationControlDynamics`]

| Inherited from
| xref::class/ExcitationSystemDynamics.adoc[`ExcitationSystemDynamics`]


|===

////
[.text-left]
--
<<slots_table.DiscontinuousExcitationControlDynamics,&#10548;>>
--
////


//[discrete]
[#enabled]
=== `enabled`
+++Function block used indicator.
true = use of function block is enabled
false = use of function block is disabled.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:DynamicsFunctionBlock.enabled`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/Boolean[`boolean`]

| Inherited from
| xref::class/DynamicsFunctionBlock.adoc[`DynamicsFunctionBlock`]


|===

////
[.text-left]
--
<<slots_table.enabled,&#10548;>>
--
////


//[discrete]
[#ilr]
=== `ilr`
+++Exciter output current limit reference (<i>Ilr</i>) (&gt; 0).  Typical value = 4,164.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:ExcST6B.ilr`
| Cardinality
| 0..1
| Type
| xref::class/PU.adoc[`PU`]


|===

////
[.text-left]
--
<<slots_table.ilr,&#10548;>>
--
////


//[discrete]
[#InstanceSet]
=== `InstanceSet`
+++Dataset containing the data objects.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.InstanceSet`
| Cardinality
| 1
| Type
| xref::class/InstanceSet.adoc[`InstanceSet`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.InstanceSet,&#10548;>>
--
////


//[discrete]
[#k1]
=== `k1`
+++Selector (<i>K1</i>).
true = feedback is from <i>Ifd</i>
false = feedback is not from <i>Ifd</i>.
Typical value = true.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:ExcST6B.k1`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/Boolean[`boolean`]


|===

////
[.text-left]
--
<<slots_table.k1,&#10548;>>
--
////


//[discrete]
[#kcl]
=== `kcl`
+++Exciter output current limit adjustment (<i>Kcl</i>) (&gt; 0).  Typical value = 1,0577.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:ExcST6B.kcl`
| Cardinality
| 0..1
| Type
| xref::class/PU.adoc[`PU`]


|===

////
[.text-left]
--
<<slots_table.kcl,&#10548;>>
--
////


//[discrete]
[#kff]
=== `kff`
+++Pre-control gain constant of the inner loop field regulator (<i>Kff</i>).  Typical value = 1.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:ExcST6B.kff`
| Cardinality
| 0..1
| Type
| xref::class/PU.adoc[`PU`]


|===

////
[.text-left]
--
<<slots_table.kff,&#10548;>>
--
////


//[discrete]
[#kg]
=== `kg`
+++Feedback gain constant of the inner loop field regulator (<i>Kg</i>) (&gt;= 0).  Typical value = 1.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:ExcST6B.kg`
| Cardinality
| 0..1
| Type
| xref::class/PU.adoc[`PU`]


|===

////
[.text-left]
--
<<slots_table.kg,&#10548;>>
--
////


//[discrete]
[#kia]
=== `kia`
+++Voltage regulator integral gain (<i>Kia</i>) (&gt; 0).  Typical value = 45,094.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:ExcST6B.kia`
| Cardinality
| 0..1
| Type
| xref::class/PU.adoc[`PU`]


|===

////
[.text-left]
--
<<slots_table.kia,&#10548;>>
--
////


//[discrete]
[#klr]
=== `klr`
+++Exciter output current limit adjustment (<i>Kcl</i>) (&gt; 0).  Typical value = 17,33.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:ExcST6B.klr`
| Cardinality
| 0..1
| Type
| xref::class/PU.adoc[`PU`]


|===

////
[.text-left]
--
<<slots_table.klr,&#10548;>>
--
////


//[discrete]
[#km]
=== `km`
+++Forward gain constant of the inner loop field regulator (<i>Km</i>).  Typical value = 1.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:ExcST6B.km`
| Cardinality
| 0..1
| Type
| xref::class/PU.adoc[`PU`]


|===

////
[.text-left]
--
<<slots_table.km,&#10548;>>
--
////


//[discrete]
[#kpa]
=== `kpa`
+++Voltage regulator proportional gain (<i>Kpa</i>) (&gt; 0).  Typical value = 18,038.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:ExcST6B.kpa`
| Cardinality
| 0..1
| Type
| xref::class/PU.adoc[`PU`]


|===

////
[.text-left]
--
<<slots_table.kpa,&#10548;>>
--
////


//[discrete]
[#kvd]
=== `kvd`
+++Voltage regulator derivative gain (<i>Kvd</i>).  Typical value = 0.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:ExcST6B.kvd`
| Cardinality
| 0..1
| Type
| xref::class/PU.adoc[`PU`]


|===

////
[.text-left]
--
<<slots_table.kvd,&#10548;>>
--
////


//[discrete]
[#mRID]
=== `mRID`
+++Master resource identifier issued by a model authority. The mRID is unique within an exchange context. Global uniqueness is easily achieved by using a UUID, as specified in RFC 4122, for the mRID. The use of UUID is strongly recommended.
For CIMXML data files in RDF syntax conforming to IEC 61970-552, the mRID is mapped to rdf:ID or rdf:about attributes that identify CIM object elements.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.mRID`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.mRID,&#10548;>>
--
////


//[discrete]
[#name]
=== `name`
+++The name is any free human readable and possibly non unique text naming the object.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.name`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.name,&#10548;>>
--
////


//[discrete]
[#Names]
=== `Names`
+++All names of this identified object.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.Names`
| Cardinality
| 0..*
| Type
| xref::class/Name.adoc[`Name`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.Names,&#10548;>>
--
////


//[discrete]
[#oelin]
=== `oelin`
+++OEL input selector (<i>OELin</i>).  Typical value = noOELinput (corresponds to <i>OELin</i> = 0 on diagram).+++


[cols="h,4",width=65%]
|===
| URI
| `cim:ExcST6B.oelin`
| Cardinality
| 0..1
| Type
| xref::enumeration/ExcST6BOELselectorKind.adoc[`ExcST6BOELselectorKind`]


|===

////
[.text-left]
--
<<slots_table.oelin,&#10548;>>
--
////


//[discrete]
[#OverexcitationLimiterDynamics]
=== `OverexcitationLimiterDynamics`
+++Overexcitation limiter model associated with this excitation system model.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:ExcitationSystemDynamics.OverexcitationLimiterDynamics`
| Cardinality
| 0..1
| Type
| xref::class/OverexcitationLimiterDynamics.adoc[`OverexcitationLimiterDynamics`]

| Inherited from
| xref::class/ExcitationSystemDynamics.adoc[`ExcitationSystemDynamics`]


|===

////
[.text-left]
--
<<slots_table.OverexcitationLimiterDynamics,&#10548;>>
--
////


//[discrete]
[#PFVArControllerType1Dynamics]
=== `PFVArControllerType1Dynamics`
+++Power factor or VAr controller type 1 model associated with this excitation system model.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:ExcitationSystemDynamics.PFVArControllerType1Dynamics`
| Cardinality
| 0..1
| Type
| xref::class/PFVArControllerType1Dynamics.adoc[`PFVArControllerType1Dynamics`]

| Inherited from
| xref::class/ExcitationSystemDynamics.adoc[`ExcitationSystemDynamics`]


|===

////
[.text-left]
--
<<slots_table.PFVArControllerType1Dynamics,&#10548;>>
--
////


//[discrete]
[#PFVArControllerType2Dynamics]
=== `PFVArControllerType2Dynamics`
+++Power factor or VAr controller type 2 model associated with this excitation system model.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:ExcitationSystemDynamics.PFVArControllerType2Dynamics`
| Cardinality
| 0..1
| Type
| xref::class/PFVArControllerType2Dynamics.adoc[`PFVArControllerType2Dynamics`]

| Inherited from
| xref::class/ExcitationSystemDynamics.adoc[`ExcitationSystemDynamics`]


|===

////
[.text-left]
--
<<slots_table.PFVArControllerType2Dynamics,&#10548;>>
--
////


//[discrete]
[#PowerSystemStabilizerDynamics]
=== `PowerSystemStabilizerDynamics`
+++Power system stabilizer model associated with this excitation system model.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:ExcitationSystemDynamics.PowerSystemStabilizerDynamics`
| Cardinality
| 0..1
| Type
| xref::class/PowerSystemStabilizerDynamics.adoc[`PowerSystemStabilizerDynamics`]

| Inherited from
| xref::class/ExcitationSystemDynamics.adoc[`ExcitationSystemDynamics`]


|===

////
[.text-left]
--
<<slots_table.PowerSystemStabilizerDynamics,&#10548;>>
--
////


//[discrete]
[#PropertiesCIMDataObject]
=== `PropertiesCIMDataObject`
+++The single CIM data object in the appropriate dataset context.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.PropertiesCIMDataObject`
| Cardinality
| 0..1
| Type
| xref::class/ChangeSetMember.adoc[`ChangeSetMember`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.PropertiesCIMDataObject,&#10548;>>
--
////


//[discrete]
[#SynchronousMachineDynamics]
=== `SynchronousMachineDynamics`
+++Synchronous machine model with which this excitation system model is associated.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:ExcitationSystemDynamics.SynchronousMachineDynamics`
| Cardinality
| 1
| Type
| xref::class/SynchronousMachineDynamics.adoc[`SynchronousMachineDynamics`]

| Inherited from
| xref::class/ExcitationSystemDynamics.adoc[`ExcitationSystemDynamics`]


|===

////
[.text-left]
--
<<slots_table.SynchronousMachineDynamics,&#10548;>>
--
////


//[discrete]
[#TargetingCIMDataObject]
=== `TargetingCIMDataObject`
+++Data objects registered.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.TargetingCIMDataObject`
| Cardinality
| 0..*
| Type
| xref::class/ChangeSetMember.adoc[`ChangeSetMember`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.TargetingCIMDataObject,&#10548;>>
--
////


//[discrete]
[#tg]
=== `tg`
+++Feedback time constant of inner loop field voltage regulator (<i>Tg</i>) (&gt;= 0).  Typical value = 0,02.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:ExcST6B.tg`
| Cardinality
| 0..1
| Type
| xref::class/Seconds.adoc[`Seconds`]


|===

////
[.text-left]
--
<<slots_table.tg,&#10548;>>
--
////


//[discrete]
[#ts]
=== `ts`
+++Rectifier firing time constant (<i>Ts</i>) (&gt;= 0).  Typical value = 0.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:ExcST6B.ts`
| Cardinality
| 0..1
| Type
| xref::class/Seconds.adoc[`Seconds`]


|===

////
[.text-left]
--
<<slots_table.ts,&#10548;>>
--
////


//[discrete]
[#tvd]
=== `tvd`
+++Voltage regulator derivative gain (<i>Tvd</i>) (&gt;= 0).  Typical value = 0.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:ExcST6B.tvd`
| Cardinality
| 0..1
| Type
| xref::class/Seconds.adoc[`Seconds`]


|===

////
[.text-left]
--
<<slots_table.tvd,&#10548;>>
--
////


//[discrete]
[#UnderexcitationLimiterDynamics]
=== `UnderexcitationLimiterDynamics`
+++Undrexcitation limiter model associated with this excitation system model.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:ExcitationSystemDynamics.UnderexcitationLimiterDynamics`
| Cardinality
| 0..1
| Type
| xref::class/UnderexcitationLimiterDynamics.adoc[`UnderexcitationLimiterDynamics`]

| Inherited from
| xref::class/ExcitationSystemDynamics.adoc[`ExcitationSystemDynamics`]


|===

////
[.text-left]
--
<<slots_table.UnderexcitationLimiterDynamics,&#10548;>>
--
////


//[discrete]
[#vamax]
=== `vamax`
+++Maximum voltage regulator output (<i>Vamax</i>) (&gt; 0).  Typical value = 4,81.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:ExcST6B.vamax`
| Cardinality
| 0..1
| Type
| xref::class/PU.adoc[`PU`]


|===

////
[.text-left]
--
<<slots_table.vamax,&#10548;>>
--
////


//[discrete]
[#vamin]
=== `vamin`
+++Minimum voltage regulator output (<i>Vamin</i>) (&lt; 0).  Typical value = -3,85.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:ExcST6B.vamin`
| Cardinality
| 0..1
| Type
| xref::class/PU.adoc[`PU`]


|===

////
[.text-left]
--
<<slots_table.vamin,&#10548;>>
--
////


//[discrete]
[#vilim]
=== `vilim`
+++Selector (<i>Vilim</i>).
true = <i>Vimin</i>-<i>Vimax</i> limiter is active
false = <i>Vimin</i>-<i>Vimax</i> limiter is not active.
Typical value = true.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:ExcST6B.vilim`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/Boolean[`boolean`]


|===

////
[.text-left]
--
<<slots_table.vilim,&#10548;>>
--
////


//[discrete]
[#vimax]
=== `vimax`
+++Maximum voltage regulator input limit (<i>Vimax</i>) (&gt; ExcST6B.vimin).  Typical value = 10.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:ExcST6B.vimax`
| Cardinality
| 0..1
| Type
| xref::class/PU.adoc[`PU`]


|===

////
[.text-left]
--
<<slots_table.vimax,&#10548;>>
--
////


//[discrete]
[#vimin]
=== `vimin`
+++Minimum voltage regulator input limit (<i>Vimin</i>) (&lt; ExcST6B.vimax).  Typical value = -10.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:ExcST6B.vimin`
| Cardinality
| 0..1
| Type
| xref::class/PU.adoc[`PU`]


|===

////
[.text-left]
--
<<slots_table.vimin,&#10548;>>
--
////


//[discrete]
[#vmult]
=== `vmult`
+++Selector (<i>vmult</i>).
true = multiply regulator output by terminal voltage
false = do not multiply regulator output by terminal voltage. 
Typical value = true.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:ExcST6B.vmult`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/Boolean[`boolean`]


|===

////
[.text-left]
--
<<slots_table.vmult,&#10548;>>
--
////


//[discrete]
[#VoltageCompensatorDynamics]
=== `VoltageCompensatorDynamics`
+++Voltage compensator model associated with this excitation system model.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:ExcitationSystemDynamics.VoltageCompensatorDynamics`
| Cardinality
| 1
| Type
| xref::class/VoltageCompensatorDynamics.adoc[`VoltageCompensatorDynamics`]

| Inherited from
| xref::class/ExcitationSystemDynamics.adoc[`ExcitationSystemDynamics`]


|===

////
[.text-left]
--
<<slots_table.VoltageCompensatorDynamics,&#10548;>>
--
////


//[discrete]
[#vrmax]
=== `vrmax`
+++Maximum voltage regulator output (<i>Vrmax</i>) (&gt; 0).  Typical value = 4,81.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:ExcST6B.vrmax`
| Cardinality
| 0..1
| Type
| xref::class/PU.adoc[`PU`]


|===

////
[.text-left]
--
<<slots_table.vrmax,&#10548;>>
--
////


//[discrete]
[#vrmin]
=== `vrmin`
+++Minimum voltage regulator output (<i>Vrmin</i>) (&lt; 0).  Typical value = -3,85.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:ExcST6B.vrmin`
| Cardinality
| 0..1
| Type
| xref::class/PU.adoc[`PU`]


|===

////
[.text-left]
--
<<slots_table.vrmin,&#10548;>>
--
////


//[discrete]
[#xc]
=== `xc`
+++Excitation source reactance (<i>Xc</i>).  Typical value = 0,05.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:ExcST6B.xc`
| Cardinality
| 0..1
| Type
| xref::class/PU.adoc[`PU`]


|===

////
[.text-left]
--
<<slots_table.xc,&#10548;>>
--
////





== Used by


This class is not used by any other classes as the range of a slot.
